2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/stm32f103.h (DBGMCU): New.

	* mcu/cortex-m.h: New.
	* mcu/sys-stm32f0.c, mcu/sys-stm32f103.c: Use mcu/cortex-m.h.

	* chopstx.c (chopstx_conf_idle): Call chx_sleep_mode before
	changing chx_allow_sleep.

	* board/board-blue-pill.h, board/board-cq-starm.h,
	board/board-fst-01-00.h, board/board-fst-01.h,
	board/board-fst-01g.h, board/board-maple-mini.h,
	board/board-nitrokey-start.h, board/board-olimex-stm32-h103.h,
	board/board-st-dongle.h, board/board-st-nucleo-f103.h,
	board/board-stbee-mini.h, board/board-stbee.h,
	board/board-stm32-primer2.h: Add MCU_STM32F1.

2017-11-16  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (chopstx_poll): API change.
	* chopstx.c (chopstx_poll): Use const pointer.

	* chopstx-cortex-m.c (idle): Support WFE.
	[!MCU_STM32F0] (chx_sleep_mode): Clock feed by HSI.

2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_conf_idle): Call chx_sleep_mode.
	* chopstx-cortex-m.c (chx_sleep_mode): New.
	* chopstx-gnu-linux.c (chx_sleep_mode): New.

2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fsm-55/hh.c (main): Add call to chopstx_conf_idle.
	* example-fsm-55/Makefile (DEFS): Remove USE_WFI_FOR_IDLE.

	* chopstx.c (chx_init): Initialize sleep lock.
	(chopstx_conf_idle): New.
	* chopstx-cortex-m.c (idle): Support sleep.

	* mcu/usb-stm32f103.c (usb_lld_event_handler): Fix suspend/resume.

2017-11-14  NIIBE Yutaka  <gniibe@fsij.org>

	* usb_lld.h (DEVICE_STATE): Add prefix USB_DEVICE_STATE_.
	(USB_DEVICE_STATE_DEFAULT): New.

	* mcu/usb-stm32f103.c (usb_lld_init): Suspend/resume init.
	(usb_lld_event_handler): Add suspend/resume support.

	* example-cdc/usb-cdc.c: Follow the change of usb_lld.h.
	* example-cdc-gnu-linux/usb-cdc.c: Ditto.
	* example-fs-bb48/usb-cdc.c: Ditto.
	* example-fraucheky/main.c: Ditto.
	* example-fraucheky/Makefile (USE_SYS): Add for debug.

2017-11-13  NIIBE Yutaka  <gniibe@fsij.org>
